--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "my-new-site",
-  "version": "0.0.1",
-  "devDependencies": {
-    "gulp": "~3.5.6",
-    "gulp-load-plugins": "~0.3.0",
-    "gulp-clean": "~0.2.4",
-    "gulp-marked": "git://github.com/lmtm/gulp-marked.git",
-    "gulp-ruby-sass": "~0.4.1",
-    "gulp-size": "~0.1.3",
-    "gulp-static-site": "*"
+  "version": "0.0.2",
+  "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-markdown": "^1.2.0",
+    "gulp-rimraf": "^0.2.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-size": "^2.0.0",
+    "gulp-static-site": "0.0.7"
   },
   "engines": {
     "node": ">=0.10.0"
-  }
+  },
+  "devDependencies": {}
 }
